--- a/02-Challenge_Portfolio/style.css
+++ b/02-Challenge_Portfolio/style.css
@@ -33,16 +33,16 @@ header {
 }
 
 .avatar {
-    width: 50px; /* Adjust size as needed */
-    height: 50px; /* Adjust size as needed */
-    border-radius: 50%;
+    width: 60px; /* Adjust size as needed */
+    height: 60px; /* Adjust size as needed */
+    border-radius: 60%;
 }
 
 .panna {
  display: flex;
  justify-content: center;
- justify-content: space-between;
- align-items: center;
+ justify-content: space-around;
+ align-items: normal;
 }
 
 nav {
